[package]
name = "tcp-multiplexer"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tcp-ais-broker"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
metrics = "0.23"
metrics-exporter-prometheus = "0.15"
futures-util = "0.3"
anyhow = "1"
thiserror = "1"
